--- a/AppLolitas/static/AppLolitas/css/index.css
+++ b/AppLolitas/static/AppLolitas/css/index.css
@@ -80,12 +80,11 @@ p {
 }
 .nav-item {
   text-align: center;
+  margin: auto 8px;
 }
 .dropdown {
   margin-right: 75px;
   text-align: center;
-}
-.dropdown-item {
 }
 
 @media only screen and (max-width: 991px) {
@@ -103,7 +102,7 @@ p {
   --clippy: polygon(0 0, 0 0, 0 100%, 0% 100%);
 }
 
-.li-menu {
+.active {
   background-color: var(--colorPrincipal);
   border-radius: 4px;
   width: 100%;
