--- a/AppLolitas/templates/AppLolitas/carrito.html
+++ b/AppLolitas/templates/AppLolitas/carrito.html
@@ -1,6 +1,13 @@
 {% extends 'AppLolitas/base.html' %} {% block tit %} {% load static %}
-<title>Carrito</title>
+<title>Perfil</title>
 {% endblock tit %} {% block contenido %}
 <main></main>
+{% endblock contenido %} {% block scripts %}
 
-{% endblock contenido %} {% block scripts %}{% endblock scripts %}
+<script type="module" src="{% static 'AppLolitas/js/carrito.js' %}"></script>
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+  crossorigin="anonymous"
+></script>
+{% endblock scripts %}
