--- a/AppLolitas/templates/AppLolitas/base.html
+++ b/AppLolitas/templates/AppLolitas/base.html
@@ -72,6 +72,14 @@
                   </li>
                   <li class="nav-item">
                     <a
+                      class="nav-link {% if active_page == 'tienda' %}active {% else %}li-efecto {% endif %}"
+                      aria-current="page"
+                      href="{% url 'tienda' %}"
+                      
+                      > Tienda</a
+                    >
+                  <li class="nav-item">
+                    <a
                       class="nav-link {% if active_page == 'servicios' %}active {% else %}li-efecto {% endif %}"
                       aria-current="page"
                       href="{% url 'servicios' %}"
@@ -97,21 +105,36 @@
                       > TyC</a
                     >
                   </li>
-                  <li class="nav-item dropdown ">
+
+                  {% if user.is_authenticated %}
+                  <li class="nav-item">
+                    <a
+                      class="nav-link ic-carrito "
+                      aria-current="page"
+                      href="{% url 'carrito' %}"
+                      > 🛒</a>
+                  </li>
+                 
+                  {% endif %}
+                  <li class="nav-item dropdown" >
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             <i class="fa-solid fa-user logo-iniciar-sesion"></i>
           </a>
           <div class="cont-submenu">
-          <ul class="dropdown-menu">
+          <ul class="dropdown-menu ul-submenu">
             {% if user.is_authenticated %}
-            <li class="nav-item"><a class="dropdown-item" href="{% url 'cerrar_sesion' %}">Cerrar Sesion</a></li>
-            {% else %}
-            <li class="nav-item"><a class="dropdown-item" href="{% url 'iniciar_sesion' %}">Iniciar Sesion</a></li>
+            <li class="nav-item "><a class="dropdown-item a-submenu" href="{% url 'perfil' %}">Mi perfil</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li class="nav-item"><a class="dropdown-item" href="{% url 'registro' %}">Crear Usuario</a></li>
+            <li class="nav-item"><a class="dropdown-item a-submenu" href="{% url 'cerrar_sesion' %}">Cerrar Sesion</a></li>
+            {% else %}
+            <li class="nav-item"><a class="dropdown-item a-submenu" href="{% url 'iniciar_sesion' %}">Iniciar Sesion</a></li>
+            <li><hr class="dropdown-divider"></li>
+            <li class="nav-item"><a class="dropdown-item a-submenu" href="{% url 'registro' %}">Crear Usuario</a></li>
             {% endif %}
           </ul>
         </li>
+
+
         </div>
 
                  
