--- a/AppLolitas/templates/AppLolitas/servicio.html
+++ b/AppLolitas/templates/AppLolitas/servicio.html
@@ -5,8 +5,8 @@
   <div id="contServicio"></div>
 </main>
 {% endblock contenido %} {% block scripts %}
-<script type="module" src="../../static/AppLolitas/js/servicio.js"></script>
-<script type="module" src="../../static/AppLolitas/js/data.js"></script>
+<script type="module" src="../static/AppLolitas/js/servicio.js"></script>
+<script type="module" src="../static/AppLolitas/js/data.json"></script>
 <script
   src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
   integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
